--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "node-sass": "^4.12.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "swiped-events": "^1.1.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
