--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sweetalert2": "^10.13.3",
     "swiped-events": "^1.1.4",
     "web-vitals": "^0.2.4"
   },
